--- a/assets/style.css
+++ b/assets/style.css
@@ -7,7 +7,7 @@ header,
 footer {
     width: 100%;
     height: 120px;
-    background-color: lightskyblue;
+    background-color: skyblue;
     color: rgba(255, 255, 255, 0.832);
 }
 
